[project]
name = "fissa-python3-12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "future>=1.0.0",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "numpy>=1.26.2",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "read-roi>=1.6.0",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "shapely>=2.0.6",
    "tifffile>=2024.12.12",
    "tqdm>=4.67.1",
]
